RESOLVED FIXED170575
Web Inspector: Hangs when loading under SpeculativeLoad::shouldCaptureExtraNetworkLoadMetrics
https://bugs.webkit.org/show_bug.cgi?id=170575
Summary Web Inspector: Hangs when loading under SpeculativeLoad::shouldCaptureExtraNe...
Joseph Pecoraro
Reported 2017-04-06 16:58:27 PDT
Hangs when loading under SpeculativeLoad::shouldCaptureExtraNetworkLoadMetrics with Inspector open. This is infinite looping because m_networkLoad is (this). #if USE(NETWORK_SESSION) bool SpeculativeLoad::shouldCaptureExtraNetworkLoadMetrics() const { return m_networkLoad->shouldCaptureExtraNetworkLoadMetrics(); } #endif We can just drop this method and get the right behavior.
Attachments
[PATCH] Proposed Fix (2.25 KB, patch)
2017-04-06 17:01 PDT, Joseph Pecoraro
bburg: review+
Joseph Pecoraro
Comment 1 2017-04-06 17:01:09 PDT
Created attachment 306439 [details] [PATCH] Proposed Fix
Blaze Burg
Comment 2 2017-04-06 17:02:03 PDT
Comment on attachment 306439 [details] [PATCH] Proposed Fix rs=🤣
Joseph Pecoraro
Comment 3 2017-04-06 17:40:07 PDT
Note You need to log in before you can comment on or make changes to this bug.