Web Inspector: Hangs when loading under SpeculativeLoad::shouldCaptureExtraNetworkLoadMetrics https://bugs.webkit.org/show_bug.cgi?id=170575

Rubber-stamped by Brian Burg.

* NetworkProcess/cache/NetworkCacheSpeculativeLoad.cpp:
(WebKit::NetworkCache::SpeculativeLoad::shouldCaptureExtraNetworkLoadMetrics): Deleted.
* NetworkProcess/cache/NetworkCacheSpeculativeLoad.h:
m_networkLoad is a wrapper around `this` as the client, so we would infinite loop here.

Canonical link: https://commits.webkit.org/187507@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215078 268f45cc-cd09-0410-ab3c-d52691b4dbfc